interface improvements